added a lot of thing ;)
